# Self-Hosting-C-Core-Compiler

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  DEVELOPMENT.md  EXAMPLES.md  PRD.md  README.md  REFACTOR_PRD.md  RELEASE.md  SELF_HOSTING.md  TASKS.md  build_examples.sh
bootstrap/: bootstrap.sh  compiler.c
examples/: array_demo.c  array_demo_stdout.c  char_demo.c  char_demo_stdout.c  control_flow_demo.c  control_flow_demo_stdout.c  factorial.c  factorial_stdout.c  fib.c  fib_sequence_stdout.c  fib_stdout.c  hello_stdout.c  pointer_demo.c  pointer_demo_stdout.c  string_demo.c  string_demo_stdout.c
old/: EXAMPLES.md  TASKS.md  TESTING.md
python_host/: pyproject.toml
python_host/src/c_core_compiler/: __init__.py  __main__.py  ast_nodes.py  cli.py  ir.py  ir_builder.py  lexer.py  parser.py  pipeline.py  semantic.py  tokens.py
python_host/src/c_core_compiler/codegen/: __init__.py  _portable_c.py  linux_x86_64.py  macos_x86_64.py  typing.py
python_host/tests/: _helpers.py  test_codegen.py  test_e2e.py  test_optimizer.py  test_semantic.py
src/c_core_compiler/: ast_nodes.py  cli.py  ir.py  ir_builder.py  lexer.py  optimizer.py  parser.py  semantic.py  symbol_table.py  tokens.py  toolchain.py
src/c_core_compiler/codegen/: _portable_c.py
tests/: run_c_tests.sh  test_cli.py  test_codegen.py  test_e2e.py  test_ir_builder.py  test_lexer.py  test_optimizer.py  test_parser.py  test_semantic.py
tests/c/basic/: array.c  char_ops.c  char_ops.expected  control_flow.c  factorial.c  factorial.expected  fibonacci.c  hello.c  pointer.c  pointer.expected
(+15 files in other folders)
