[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "c-core-compiler"
version = "0.1.0"
description = "A clear, testable first-generation compiler for a constrained C subset."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "bizi" }
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
